# Workshop_001

./: .gitignore  README.md  cutoms_topo.json  pyproject.toml
notebooks/: data_loading_002.ipynb  data_processing.ipynb
notebooks/EDA_003/: EDA__003.ipynb
src/database/: create_database.py
